# pino-rs

./: .gitignore  Cargo.toml  LICENSE  Readme.md
.cargo/: config  config.toml
app/: Cargo.toml  memory.x
app/src/: lib.rs  main.rs
bldc/: Cargo.toml
bldc/examples/: allocator.rs  test_on_host.rs
bldc/src/: allocator.rs  commutation.rs  cordic.rs  current_sensing.rs  driver.rs  encoder.rs  foc.rs  led.rs  lib.rs  main.rs  memory.rs  pi_controller.rs  pwm.rs  timer.rs
bldc/src/comms/: fdcan.rs  handler.rs  messages.rs  mod.rs
bldc/src/comms/fdcan/: extended_filter.rs  rx_fifo.rs  standard_filter.rs  standard_message_filter.rs  tx_event.rs  tx_fifo.rs
bldc/src/comms/handlers/: disable_control_loop.rs  mod.rs  pos_vel_control.rs  set_pos_vel.rs  torque_control.rs
bldc/src/commutation/: calibrate_adc.rs  calibrate_e_zero.rs  commutator.rs  field_oriented_control.rs  idle_current_distribution.rs  idle_current_sensor.rs  inductance_measurement.rs  interrupt.rs  measure_inductance.rs  measure_resistance.rs  mod.rs  phase_current.rs  pos_vel_control.rs  read_encoder.rs  torque_control.rs
bldc/src/control_loops/: calibrate_adc.rs  calibrate_e_zero.rs  commutator.rs  controller.rs  idle_current_distribution.rs  idle_current_sensor.rs  interrupt.rs  measure_inductance.rs  measure_resistance.rs  mod.rs  phase_current.rs  pos_vel_control.rs  read_encoder.rs  torque_control.rs
bldc/src/ic/: drv8323rs.rs  ma702.rs  mod.rs
bldc/src/ic/drv8323rs/: registers.rs
bldc/src/util/: bitfield.rs  buffered_state.rs  interrupts.rs  mod.rs  stm32.rs  transaction.rs
firmware/bldc/: Cargo.toml  openocd.gdb
firmware/bldc/src/: current_sensing.rs  driver.rs  encoder.rs  led.rs  lib.rs  main.rs  memory.rs  timer.rs
firmware/bldc/src/comms/: fdcan.rs  messages.rs  mod.rs
firmware/bldc/src/comms/fdcan/: extended_filter.rs  tx_event.rs
firmware/bldc/src/commutation/: calibrate_adc.rs  calibrate_e_zero.rs  idle_current_distribution.rs  idle_current_sensor.rs  interrupt.rs  measure_inductance.rs  measure_resistance.rs  mod.rs  phase_current.rs  pos_vel_control.rs  read_encoder.rs
firmware/bldc/src/ic/: drv8323rs.rs
firmware/bldc/src/ic/drv8323rs/: registers.rs
firmware/bldc/src/util/: bitfield.rs  seq_lock.rs  stm32.rs
host_tests/: Cargo.toml
host_tests/tests/: timer.rs
messages/: Cargo.toml
messages/src/: lib.rs
notebooks/: adc_calib.ipynb  fdcan.ipynb  foc_transforms.ipynb  rigol.ipynb
notes/: 20210326.md  20210328.md  20210329.md  20210331.md  20210402.md  20210404.md  20210408.md  20210409.md  20210412.md  20210415.md  20210418.md  20210610.md  20210810.md  board.md  control.md  ee_components.md  embedded.md  reading_list.md  robotics.md  stm32g474re.md
notes/contol systems lectures/: control_systems_lectures.md
notes/control theory bootcamp/: part01.md  part02.md  part03.md  part04.md  part05.md  part06.md  part07.md  part08.md  part09.md  part10.md  part11.md  part12.md  part13.md  part14.md  part15.md  part16.md  part17.md  part18.md  part19.md  part20.md  part21.md  part22.md  part23.md  part24.md  (+14 more)
tools/: STM32G474xx.svd  openocd.gdb  stm32g474re.cfg  stm32g4x_custom.cfg
v2/: #auto_saved_files#  fp-info-cache  v2.kicad_pcb  v2.kicad_prl  v2.kicad_pro  v2.kicad_sch
(+52 files in other folders)
