[package]
authors = ["Tim Blakely <tim.blakely@gmail.com>"]
edition = "2018"
readme = "README.md"
name = "bldc"
version = "0.1.0"

[dependencies]
cortex-m = "0.7.2"
cortex-m-rt = "0.6.13"
cortex-m-semihosting = "0.3.3"
vcell = "0.1.0"
paste = "1.0"
# panic-halt = "0.2.0"
panic-itm = {version = "0.4.2", optional = true}
third_party = {path = "../third_party"}
static_assertions = "1.1.0"
ringbuffer = {version = "0.5.1", default-features = false}

[features]
default = ["panic-itm"]



[dependencies.stm32g4]
default-features = false
features = ["stm32g474", "rt"]
# version = "0.13.0"
# I've got some local modifications to the stm32-rs repo that I intend to push
# upstream. Until then, use my local version.
path = "../../stm32-rs/stm32g4"


# this lets you use `cargo fix`!
[[bin]]
name = "bldc"
test = false
bench = false
