[package]
authors = ["Tim Blakely <tim.blakely@gmail.com>"]
# edition = "2021"
edition = "2018"
readme = "README.md"
name = "bldc"
version = "0.1.0"

[dependencies]
# panic-halt = "0.2.0"
cortex-m = "0.7.2"
cortex-m-rt = "0.6.13"
cortex-m-semihosting = "0.3.3"
fixed = "1.9.0"
heapless = "0.7.7"
lazy_static = {version="1.4.0", features=["spin_no_std"]}
num-traits = {version = "0.2.14", default-features = false}
panic-itm = {version = "0.4.2", optional = true}
paste = "1.0"
ringbuffer = {version = "0.8.1", default-features = false}
rlsf = {version = "0.1.2" }
static_assertions = "1.1.0"
third_party = {path = "../third_party"}
messages = {path = "../../messages"}
vcell = "0.1.0"

[features]
default = ["panic-itm"]
host = []


[dependencies.alloc-cortex-m]
path = "../../../alloc-cortex-m"

[dependencies.stm32g4]
default-features = false
features = ["stm32g474", "rt"]
# version = "0.13.0"
# I've got some local modifications to the stm32-rs repo that I intend to push
# upstream. Until then, use my local version.
path = "../../../stm32-rs/stm32g4"


# this lets you use `cargo fix`!
[[bin]]
name = "bldc"
test = false
bench = false

[lib]
name = "bldc"
test = false
bench = false
